--- a/index.html
+++ b/index.html
@@ -232,17 +232,17 @@
 
         .arm.right {
             right: 55px;
-            transform: rotate(30deg);
+            transform: rotate(0deg);
             transform-origin: top center;
-            animation: hammer 0.6s infinite ease-in-out;
+            animation: armSwing 0.6s infinite ease-in-out;
         }
 
-        @keyframes hammer {
-            0%, 100% { transform: rotate(30deg) translateY(0); }
-            50% { transform: rotate(30deg) translateY(-25px); }
+        @keyframes armSwing {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-30px); }
         }
 
-        /* Hammer - now attached to hand */
+        /* Hand holding the hammer */
         .hand {
             position: absolute;
             bottom: -10px;
@@ -256,19 +256,11 @@
 
         .hammer {
             position: absolute;
-            bottom: -30px;
+            bottom: 5px;
             left: 50%;
-            transform: translateX(-50%) rotate(45deg);
-            transform-origin: bottom center;
+            transform: translateX(-50%) rotate(90deg);
+            transform-origin: center 70px;
             z-index: 15;
-        }
-
-        .hammer-handle {
-            width: 12px;
-            height: 80px;
-            background: linear-gradient(90deg, #8D6E63 0%, #5D4037 100%);
-            border-radius: 6px;
-            margin: 0 auto;
         }
 
         .hammer-handle {
