--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
 
         .arm.right {
             right: 55px;
-            transform: rotate(-25deg);
-            transform-origin: bottom center;
+            transform: rotate(-45deg);
+            transform-origin: top center;
             animation: armSwing 0.6s infinite ease-in-out;
         }
 
         @keyframes armSwing {
-            0%, 100% { transform: rotate(-25deg) translateY(10px); }
-            50% { transform: rotate(-25deg) translateY(-20px); }
+            0%, 100% { transform: rotate(-45deg); }
+            50% { transform: rotate(-15deg); }
         }
 
         /* Hand holding the hammer */
@@ -282,17 +282,17 @@
             border-radius: 5px;
         }
 
-        /* Impact stars */
+        /* Impact stars - positioned under hammer at bottom of swing */
         .impact {
             position: absolute;
-            bottom: 40px;
-            right: 20px;
+            bottom: 25px;
+            right: 0px;
             opacity: 0;
             animation: impactFlash 0.6s infinite;
         }
 
         @keyframes impactFlash {
-            0%, 45%, 100% { opacity: 0; transform: scale(0.5); }
+            0%, 45%, 55%, 100% { opacity: 0; transform: scale(0.5); }
             50% { opacity: 1; transform: scale(1.2); }
         }
 
